pushing current repo

--- a/www/index.html
+++ b/www/index.html
@@ -31,28 +31,9 @@
       <ion-header-bar class="bar-stable">
         <h1 class="title">TT</h1>
       </ion-header-bar>
-
- <ion-side-menus>
-    <!-- Center content -->
-    <ion-side-menu-content>
-      <ion-content>
-          <img src="img/adventure.jpg">
-          <ion-list>
-      <ion-item ng-repeat="adventures in adventures">
-        {{adventures.title}}
-      </ion-item>
-    </ion-list>
-      </ion-content>    
-    </ion-side-menu-content>
-
-    <!-- Left menu -->
-    <ion-side-menu side="left">
-      <ion-header-bar class="bar-dark">
-        <h1 class="title">Adventures</h1>
-      </ion-header-bar>
-    </ion-side-menu>
-
-  </ion-side-menus>
-
+    <ion-content>
+        <a href="/main.html"><img src="#/home.jpg"></a>
+        
+    </ion-content>
   </body>
 </html>
